# WebPlate

./: .gitignore
django/: Dockerfile  api-start-prod.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
django/mealdelivery/: asgi.py  settings.py  urls.py  wsgi.py
django/mealdelivery/aws/: conf.py
django/meals_ordering/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/meals_ordering/migrations/: 0001_initial.py
django/meals_ordering/tests/: conftest.py  test_models.py  test_views.py
django/order/: admin.py  models.py  serializers.py  urls.py  views.py
django/order/migrations/: 0001_initial.py  0002_alter_order_total_price_alter_orderitem_meal_and_more.py  0003_category_emoji.py  0004_meal_discount_percentage_meal_discounted_price_and_more.py  0005_remove_discountcode_used_discountcode_used_by_users.py  0006_discountcode_usage_limit_alter_discountcode_code.py
django/order/tests/: conftest.py  test_models.py  test_views.py
django/profile/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/profile/migrations/: 0001_initial.py  0002_remove_meal_category_remove_meal_ingredients_and_more.py
django/profile/tests/: conftest.py  test_models.py
next/: middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
next/app/: StoreProvider.tsx  dummy.json  layout.tsx  loading.tsx  page.tsx
next/app/(auth)/: layout.tsx
next/app/(dashboard)/: layout.tsx
next/app/_components/: AddressForm.tsx  AuthForm.tsx  Cart.tsx  (+23 more)
next/types/: global.d.ts
(+30 files in other folders)
