[tool.poetry]
name = "web-plate"
version = "0.1.0"
description = ""
authors = ["amireho3ein <amireho3ein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
boto3 = "1.34.154"
botocore = "1.34.154"
coverage = "7.6.0"
django = "5.0.7"
django-extensions = "3.2.3"
django-filter = "24.2"
django-storages = "1.14.4"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-yasg = "1.21.7"
exceptiongroup = "1.2.2"
gunicorn = "23.0.0"
inflection = "0.5.1"
iniconfig = "2.0.0"
jmespath = "1.0.1"
markdown = "3.6"
packaging = "24.1"
pillow = "10.4.0"
pluggy = "1.5.0"
psycopg2-binary = "2.9.9"
pyjwt = "2.8.0"
pytest = "8.2.2"
pytest-django = "4.8.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
s3transfer = "0.10.2"
six = "1.16.0"
sqlparse = "0.5.1"
tomli = "2.0.1"
typing-extensions = "4.12.2"
uritemplate = "4.1.1"
urllib3 = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
